@@ -2,6 +2,9 @@
 # Copyright 1999-2008 Gentoo Foundation; 2008 Chris Gianelloni, Andrew Gaffney
 # Distributed under the GPL v2
 
+  12 Nov 2008; Andrew Gaffney <agaffney@gentoo.org> gen_compile.sh:
+  Add compile_fuse() and compile_unionfs_fuse()
+
   04 Nov 2008; Andrew Gaffney <agaffney@gentoo.org> arch/alpha/busy-config,
   arch/ia64/busy-config, arch/mips/busy-config, arch/parisc/busy-config,
   arch/parisc64/busy-config, arch/ppc/busy-config, arch/ppc64/busy-config,
